update device, process; del watcher
直接将设备实体封入deviceInfo中方便调用, 删去暂不使用的watcher类

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,8 @@ add_executable(Audio_Spatializer
         steamaudio/include/phonon_interfaces.h
         steamaudio/include/phonon_version.h
         ${furry}
+        src/capture/process.cpp
+        src/capture/process.h
 )
 
 link_directories(steamaudio/lib/windows-x64)
